fix #8 on mobile, too much whitespace on right side (25%)

--- a/style.css
+++ b/style.css
@@ -9,4 +9,5 @@ textarea {
 	width: 100%;
 	height: 290px;
 	tab-size: 4;
+	box-sizing: border-box;
 }
